# master-control

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  install.sh  pyproject.toml  uninstall.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  host_validation_report.yml  mc_capability.md  mc_regression.md
.github/workflows/: ci.yml  codeql.yml
config/polkit/: io.mastercontrol.rootexec.policy
config/privilege/: actions.json
config/soul/: core_profile.yaml
docs/: ADAPTIVE_INTELLIGENCE_SPEC.md  ADAPTIVE_RUNTIME.md  AI_INTERFACE.md  ARCHITECTURE.md  CODE_MAP.md  CONTEXT_ENGINE.md  CORE_CONTRACTS.md  DREAM_TIMER.md  HUMANIZATION_RUNTIME.md  IDENTITY_AND_TRUST.md  INCIDENT_OPERATIONS.md  INDEX.md  MASTERCONTROLD_RUNTIME.md  MASTERCONTROL_V0.1_SPEC.md  MC_ENGINEERING_FLOW.md  NEXT_SESSION.md  OPERATIONAL_INTELLIGENCE.md  PEXEC_MODEL.md  PRIVILEGE_BOOTSTRAP.md  PRIVILEGE_BROKER.md  PRIVILEGE_MODEL.md  PROJECT_FOUNDATIONS.md  README.md  ROADMAP.md  SECURITY_WATCH.md  SOUL_CORE.md  WORKLOG.md  alpha-release-notes.md  alpha-validation-report.md  architecture.md  beta-readiness-gate.md  beta-resume-plan.md  call-for-testers.md  community-host-validation.md  core-interfaces-refactor-plan.md  host-profile-validation.md  mcp-client-validation.md  mvp-closeout-backlog.md  mvp-evolution-plan.md  mvp-plan.md  (+14 more)
docs/adrs/: 0001-modular-monolith-python.md  0002-cli-first-host-service.md  0003-typed-tools-and-risk-gates.md  0004-recommendation-actions-and-approval.md  0005-managed-config-editing.md
docs/diagrams/: README.md  chat-planning-flow.mmd  master-control-flow.mmd  readme-overview.mmd  recommendation-approval-flow.mmd  (+1 more)
mastercontrol/: __init__.py  contracts.py
scripts/: install-dream-timer.sh  install-privilege-bootstrap.sh  install-privilege-broker.sh  install-security-watch-timer.sh  mastercontrol  mc-ai  mc-ai-chat  mc-dream  mc-flow-smoke  mc-humanized  mc-intent-classifier  mc-operator-profiler  mc-privilege-broker  mc-root-action  mc-security-watch  mc-tone-analyzer  prepare_host_validation_bundle.py  validate_host_profile.py  validate_mcp_client.py  validate_operator_bootstrap.py
tests/: test_app.py  test_bootstrap_prereqs.py  test_bootstrap_validation.py  test_chat.py  test_cli.py  test_config_tools.py  test_context_collectors.py  test_context_engine.py  test_context_events.py  test_context_store.py  test_contracts.py  test_dns_module.py  test_e2e.py  test_flow_orchestrator.py  test_flow_smoke.py  test_host_validation.py  test_humanized_kernel.py  test_install_scripts.py  test_intent_classifier.py  test_mastercontrold_context.py  test_mastercontrold_flow.py  test_mc_ai_interface.py  test_mc_tui.py  test_mcp_server.py  test_mcp_stdio_integration.py  test_multi_step_chat.py  test_observations.py  test_ollama_adapter.py  test_ollama_provider.py  test_openai_provider.py  test_path_selector_context.py  test_pexec.py  test_policy.py  test_policy_engine.py  test_privilege_broker.py  test_provider_availability.py  test_root_exec_security.py  test_runtime_policy_integration.py  test_security_module.py  test_security_watch.py  (+8 more)
(+121 files in other folders)
