[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "master-control"
version = "0.1.0a2"
description = "Conversational Linux agent with controlled execution and auditable actions."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Irving" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.15",
  "pre-commit>=4.2",
  "pytest>=8.3",
  "ruff>=0.11",
]

[project.scripts]
mc = "master_control.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
exclude = [
  "^tests/",
]
