[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "master-control"
version = "0.1.0a2"
description = "Local-first runtime for controlled Linux host operations with an MCP interface, policy, and auditability."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Irving" }]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.8",
  "mypy>=1.15",
  "pre-commit>=4.2",
  "pytest>=8.3",
  "ruff>=0.11",
]

[project.scripts]
mc = "master_control.cli:main"
mc-mcp = "master_control.interfaces.mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
exclude = [
  "^tests/",
]

[tool.bandit]
exclude_dirs = ["tests"]
